Add roadmap section home.html fix

--- a/home.html
+++ b/home.html
@@ -231,7 +231,7 @@
         </div>
     </div>
 
-    <!-- Основной контент страницы -->
+    <!-- Main content page -->
     <main>
         <section class="intro">
             <h1 class="main-title theme-text">ValeyevStudio — a new leap into the future!</h1>
@@ -249,80 +249,81 @@
         </section>
     </main>
 
+    <!-- Roadmap -->
     <section class="roadmap-section">
-        <h3 class="roadmap-heading theme-text">Дорожная карта 2025–2026</h3>
+        <h3 class="roadmap-heading theme-text">Roadmap 2025–2026</h3>
         <div class="roadmap-container">
-            <h2 class="roadmap-title theme-text">Наши планы</h2>
+            <h2 class="roadmap-title theme-text">Our Plans</h2>
             <div class="roadmap-timeline">
 
-                <!-- Этап 1 -->
+                <!-- Stage 1 -->
                 <div class="roadmap-item completed">
                     <div class="roadmap-dot-line"></div>
                     <button class="roadmap-toggle">
-                        <span class="stage-1 theme-text">Оптимизация сайта и программного обеспечения</span>
+                        <span class="stage-1 theme-text">Optimization of Website and Software</span>
                         <img src="assets\icons\angle-small-down.svg" alt="toggle" class="arrow-icon theme-icon">
                     </button>
                     <div class="roadmap-content stage-discription1 theme-text">
-                        Продолжим улучшать стабильность, скорость загрузки и удобство использования как веб-сайта, так и основного ПО.
+                        We will continue to improve the stability, loading speed, and user experience of both the website and the main software.
                     </div>
                 </div>
 
-                <!-- Этап 2 -->
+                <!-- Stage 2 -->
                 <div class="roadmap-item active">
                     <div class="roadmap-dot-line"></div>
                     <button class="roadmap-toggle">
-                        <span class="stage-2 theme-text">Переход на современные серверы и обновление базы данных</span>
+                        <span class="stage-2 theme-text">Migration to Modern Servers and Database Upgrade</span>
                         <img src="assets\icons\angle-small-down.svg" alt="toggle" class="arrow-icon theme-icon">
                     </button>
                     <div class="roadmap-content stage-discription2 theme-text">
-                        Планируется миграция на более производительную серверную инфраструктуру с новым интерфейсом управления и хранения данных.
+                        We plan to migrate to a more powerful server infrastructure with a new data management and storage interface.
                     </div>
                 </div>
 
-                <!-- Этап 3 -->
+                <!-- Stage 3 -->
                 <div class="roadmap-item upcoming">
                     <div class="roadmap-dot-line"></div>
                     <button class="roadmap-toggle">
-                        <span class="stage-3 theme-text">Анонс и запуск нового продукта PixelKey</span>
+                        <span class="stage-3 theme-text">Announcement and Launch of PixelKey Product</span>
                         <img src="assets\icons\angle-small-down.svg" alt="toggle" class="arrow-icon theme-icon">
                     </button>
                     <div class="roadmap-content stage-discription3 theme-text">
-                        Анонс и выход инновационного инструмента для музыкальных продюсеров и битмейкеров — платформа PixelKey с фокусом на удобство и креативность.
+                        Announcement and release of an innovative tool for music producers and beatmakers — the PixelKey platform focused on creativity and ease of use.
                     </div>
                 </div>
 
-                <!-- Этап 4 -->
+                <!-- Stage 4 -->
                 <div class="roadmap-item upcoming">
                     <div class="roadmap-dot-line"></div>
                     <button class="roadmap-toggle">
-                        <span class="stage-4 theme-text">Сотрудничество со СМИ и блогерами</span>
+                        <span class="stage-4 theme-text">Collaboration with Media and Bloggers</span>
                         <img src="assets\icons\angle-small-down.svg" alt="toggle" class="arrow-icon theme-icon">
                     </button>
                     <div class="roadmap-content stage-discription4 theme-text">
-                        Активная работа над PR-направлением: пресс-релизы, интервью, статьи и коллаборации с профильными изданиями и блогами.
+                        Active work on PR: press releases, interviews, articles, and collaborations with relevant media and bloggers.
                     </div>
                 </div>
 
-                <!-- Этап 5 -->
+                <!-- Stage 5 -->
                 <div class="roadmap-item upcoming">
                     <div class="roadmap-dot-line"></div>
                     <button class="roadmap-toggle">
-                        <span class="stage-5 theme-text">Расширение аудитории и монетизация</span>
+                        <span class="stage-5 theme-text">Audience Expansion and Monetization</span>
                         <img src="assets\icons\angle-small-down.svg" alt="toggle" class="arrow-icon theme-icon">
                     </button>
                     <div class="roadmap-content stage-discription5 theme-text">
-                        Запуск рекламных кампаний, подключение платёжных систем и развитие моделей монетизации.
+                        Launching ad campaigns, integrating payment systems, and developing monetization models.
                     </div>
                 </div>
-                <!-- Этап 6 -->
+                <!-- Stage 6 -->
                 <div class="roadmap-item upcoming">
                     <div class="roadmap-dot-line"></div>
                     <button class="roadmap-toggle">
-                        <span class="stage-6 theme-text">Привлечение спонсоров и инвесторов</span>
+                        <span class="stage-6 theme-text">Attracting Sponsors and Investors</span>
                         <img src="assets\icons\angle-small-down.svg" alt="toggle" class="arrow-icon theme-icon">
                     </button>
                     <div class="roadmap-content stage-discription6 theme-text">
-                        Формирование устойчивой экосистемы с поддержкой партнёров, инвесторов и стратегических союзников.
+                        Building a sustainable ecosystem supported by partners, investors, and strategic allies.
                     </div>
                 </div>
             </div>
@@ -374,6 +375,7 @@
         </div>
     </div>
 
+    <!-- Corpyright, footer -->
     <footer class="footer line">
         <div class="footer-content">
             <span class="footer-copyright">© 2025 Project of the ValeyevStudio company.</span>
