Optimization web site

--- a/home.html
+++ b/home.html
@@ -399,16 +399,15 @@
     </footer>
 
     <!-- Подключаем JS скрипты -->
+    <script src="js/home.js"></script>
     <script src="js/menu.js"></script>
     <script src="js/themeswitch.js"></script>
     <script src="js/translate-language.js"></script>
     <script src="js/captcha.js"></script>
-    <script src="js/faq.js"></script>
     <script src="js/player.js"></script>
     <script src="js/menu_dropdown.js"></script>
     <script src="js/download.js"></script>
     <script src="js/pushnotify.js"></script>
-    <script src="js/roadmap-toggle.js" defer></script>
 </body>
 
 </html>
