Optimization web site + fix design roadmap

--- a/home.html
+++ b/home.html
@@ -263,7 +263,7 @@
                         <span class="stage-1 theme-text">Optimization of Website and Software</span>
                         <img src="assets\icons\angle-small-down.svg" alt="toggle" class="arrow-icon theme-icon">
                     </button>
-                    <div class="roadmap-content stage-discription1 theme-text">
+                    <div class="roadmap-content stage-discription1 gray-text">
                         We will continue to improve the stability, loading speed, and user experience of both the website and the main software.
                     </div>
                 </div>
@@ -275,7 +275,7 @@
                         <span class="stage-2 theme-text">Migration to Modern Servers and Database Upgrade</span>
                         <img src="assets\icons\angle-small-down.svg" alt="toggle" class="arrow-icon theme-icon">
                     </button>
-                    <div class="roadmap-content stage-discription2 theme-text">
+                    <div class="roadmap-content stage-discription2 gray-text">
                         We plan to migrate to a more powerful server infrastructure with a new data management and storage interface.
                     </div>
                 </div>
@@ -287,7 +287,7 @@
                         <span class="stage-3 theme-text">Announcement and Launch of PixelKey Product</span>
                         <img src="assets\icons\angle-small-down.svg" alt="toggle" class="arrow-icon theme-icon">
                     </button>
-                    <div class="roadmap-content stage-discription3 theme-text">
+                    <div class="roadmap-content stage-discription3 gray-text">
                         Announcement and release of an innovative tool for music producers and beatmakers — the PixelKey platform focused on creativity and ease of use.
                     </div>
                 </div>
@@ -299,7 +299,7 @@
                         <span class="stage-4 theme-text">Collaboration with Media and Bloggers</span>
                         <img src="assets\icons\angle-small-down.svg" alt="toggle" class="arrow-icon theme-icon">
                     </button>
-                    <div class="roadmap-content stage-discription4 theme-text">
+                    <div class="roadmap-content stage-discription4 gray-text">
                         Active work on PR: press releases, interviews, articles, and collaborations with relevant media and bloggers.
                     </div>
                 </div>
@@ -311,7 +311,7 @@
                         <span class="stage-5 theme-text">Audience Expansion and Monetization</span>
                         <img src="assets\icons\angle-small-down.svg" alt="toggle" class="arrow-icon theme-icon">
                     </button>
-                    <div class="roadmap-content stage-discription5 theme-text">
+                    <div class="roadmap-content stage-discription5 gray-text">
                         Launching ad campaigns, integrating payment systems, and developing monetization models.
                     </div>
                 </div>
@@ -322,7 +322,7 @@
                         <span class="stage-6 theme-text">Attracting Sponsors and Investors</span>
                         <img src="assets\icons\angle-small-down.svg" alt="toggle" class="arrow-icon theme-icon">
                     </button>
-                    <div class="roadmap-content stage-discription6 theme-text">
+                    <div class="roadmap-content stage-discription6 gray-text">
                         Building a sustainable ecosystem supported by partners, investors, and strategic allies.
                     </div>
                 </div>
