Roadmap add finish

--- a/home.html
+++ b/home.html
@@ -326,11 +326,12 @@
                         Building a sustainable ecosystem supported by partners, investors, and strategic allies.
                     </div>
                 </div>
+                <!-- Stage 7: Finish -->
+                <div class="roadmap-item finish">
+                </div>
             </div>
         </div>
     </section>
-
-
 
     <!-- FAQ - Вопрос = Ответ. -->
     <div class="faq-container theme-text">
