--- a/home.html
+++ b/home.html
@@ -254,6 +254,7 @@
         <h3 class="roadmap-heading theme-text">Roadmap 2025–2026</h3>
         <div class="roadmap-container">
             <h2 class="roadmap-title theme-text">Our Plans</h2>
+            <div class="roadmap-divider"></div>
             <div class="roadmap-timeline">
 
                 <!-- Stage 1 -->
@@ -315,6 +316,7 @@
                         Launching ad campaigns, integrating payment systems, and developing monetization models.
                     </div>
                 </div>
+                
                 <!-- Stage 6 -->
                 <div class="roadmap-item upcoming">
                     <div class="roadmap-dot-line"></div>
@@ -325,9 +327,6 @@
                     <div class="roadmap-content stage-discription6 gray-text">
                         Building a sustainable ecosystem supported by partners, investors, and strategic allies.
                     </div>
-                </div>
-                <!-- Stage 7: Finish -->
-                <div class="roadmap-item finish">
                 </div>
             </div>
         </div>
