Add advertisement banner

--- a/home.html
+++ b/home.html
@@ -16,10 +16,10 @@
     <link rel="stylesheet" href="css/custom_toggles.css">
     <link rel="stylesheet" href="css/custom_dropdown.css">
     <link rel="stylesheet" href="css/captcha.css">
-    <link rel="stylesheet" href="css/faq.css">
     <link rel="stylesheet" href="css/player.css">
     <link rel="stylesheet" href="css/interactivehelp.css">
     <link rel="stylesheet" href="css/pushnotify.css">
+    <link rel="stylesheet" href="css/advertisement.css">
 </head>
 
 <body>
@@ -231,6 +231,27 @@
         </div>
     </div>
 
+    <!-- Advertisement banner -->
+    <div class="advertisement-banner">
+        <button class="close-banner-btn">✕</button>
+        <div class="advertisement-banner-left">
+            <h2 class="advertisement-banner-text theme-text">Get access to "Premium"</h2>
+            <p class="advertisement-banner-description theme-text">
+                Поддержи проект и получи больше:<br><br>
+                🔕 Без рекламы и баннеров<br>
+                🎁 Эксклюзивные фишки и бонусы<br>
+                💡 Ранний доступ к новым функциям<br>
+                ❤️ Поддержка развития проекта<br>
+            </p>
+            <p class="advertisement-banner-note gray-text">
+                PixeFPS остаётся бесплатной, но премиум — это способ сказать «спасибо» и получить чуть больше удобства.
+            </p>
+            <button class="advertisement-banner-button theme-button theme-text">Подробнее</button>
+        </div>
+            <div class="advertisement-banner-right">
+        </div>
+    </div>
+
     <!-- Main content page -->
     <main>
         <section class="intro">
@@ -238,10 +259,13 @@
             <p class="description">
                 New innovative programs from ValeyevPrograms represent a harmonious combination of advanced
                 technologies, <br>
-                maximum optimization and ease of use. Each application is designed to meet the highest standards, <br>
-                providing users with a user-friendly and intuitive interface. We strive to ensure that the functionality
+                maximum optimization and ease of use. Each application is designed to meet the highest standards,
+                <br>
+                providing users with a user-friendly and intuitive interface. We strive to ensure that the
+                functionality
                 of our programs <br>
-                has been maximally adapted to the needs of users, while providing high performance and saving resources.
+                has been maximally adapted to the needs of users, while providing high performance and saving
+                resources.
                 <br>
                 <br>
                 ValeyevPrograms is the future of software today.
@@ -265,7 +289,8 @@
                         <img src="assets\icons\angle-small-down.svg" alt="toggle" class="arrow-icon theme-icon">
                     </button>
                     <div class="roadmap-content stage-discription1 gray-text">
-                        We will continue to improve the stability, loading speed, and user experience of both the website and the main software.
+                        We will continue to improve the stability, loading speed, and user experience of both the
+                        website and the main software.
                     </div>
                 </div>
 
@@ -277,7 +302,8 @@
                         <img src="assets\icons\angle-small-down.svg" alt="toggle" class="arrow-icon theme-icon">
                     </button>
                     <div class="roadmap-content stage-discription2 gray-text">
-                        We plan to migrate to a more powerful server infrastructure with a new data management and storage interface.
+                        We plan to migrate to a more powerful server infrastructure with a new data management and
+                        storage interface.
                     </div>
                 </div>
 
@@ -289,7 +315,9 @@
                         <img src="assets\icons\angle-small-down.svg" alt="toggle" class="arrow-icon theme-icon">
                     </button>
                     <div class="roadmap-content stage-discription3 gray-text">
-                        Announcement and release of an innovative tool for music producers and beatmakers — the PixelKey platform focused on creativity and ease of use.
+                        Announcement and release of an innovative tool for music producers and beatmakers — the
+                        PixelKey
+                        platform focused on creativity and ease of use.
                     </div>
                 </div>
 
@@ -301,7 +329,9 @@
                         <img src="assets\icons\angle-small-down.svg" alt="toggle" class="arrow-icon theme-icon">
                     </button>
                     <div class="roadmap-content stage-discription4 gray-text">
-                        Active work on PR: press releases, interviews, articles, and collaborations with relevant media and bloggers.
+                        Active work on PR: press releases, interviews, articles, and collaborations with relevant
+                        media
+                        and bloggers.
                     </div>
                 </div>
 
@@ -316,7 +346,7 @@
                         Launching ad campaigns, integrating payment systems, and developing monetization models.
                     </div>
                 </div>
-                
+
                 <!-- Stage 6 -->
                 <div class="roadmap-item upcoming">
                     <div class="roadmap-dot-line"></div>
@@ -342,7 +372,8 @@
                 <img class="faq-arrow theme-icon" src="assets/icons/angle-small-down.svg" alt="arrow">
             </div>
             <div class="faq-answer">
-                We are a team of developers dedicated to providing our product to as many people as possible worldwide
+                We are a team of developers dedicated to providing our product to as many people as possible
+                worldwide
                 so that everyone can try it. And it's absolutely free!
             </div>
         </div>
@@ -353,10 +384,12 @@
                 <img class="faq-arrow theme-icon" src="assets/icons/angle-small-down.svg" alt="arrow">
             </div>
             <div class="faq-answer">
-                To download our official software, go to the appropriate section of the website and click the Download
+                To download our official software, go to the appropriate section of the website and click the
+                Download
                 button.<br>
                 <br>
-                Remember, by downloading our software, you agree to the user agreement and the policy of our company,
+                Remember, by downloading our software, you agree to the user agreement and the policy of our
+                company,
                 Valeyev Studio.
             </div>
         </div>
@@ -370,7 +403,8 @@
                 The price of a paid subscription is $0.99. Once activated, the subscription is valid for 1 calendar
                 month from the moment of activation.<br>
                 <br>
-                The subscription allows you to remove intrusive banners through the settings and access other features.
+                The subscription allows you to remove intrusive banners through the settings and access other
+                features.
             </div>
         </div>
     </div>
@@ -408,6 +442,7 @@
     <script src="js/menu_dropdown.js"></script>
     <script src="js/download.js"></script>
     <script src="js/pushnotify.js"></script>
+    <script src="js/advertisement.js"></script>
 </body>
 
 </html>
