Add advertisement banner +fix

--- a/home.html
+++ b/home.html
@@ -237,16 +237,16 @@
         <div class="advertisement-banner-left">
             <h2 class="advertisement-banner-text theme-text">Get access to "Premium"</h2>
             <p class="advertisement-banner-description theme-text">
-                Поддержи проект и получи больше:<br><br>
-                🔕 Без рекламы и баннеров<br>
-                🎁 Эксклюзивные фишки и бонусы<br>
-                💡 Ранний доступ к новым функциям<br>
-                ❤️ Поддержка развития проекта<br>
+                Support the project and get more:<br><br>
+                🔕 Without ads and banners<br>
+                🎁 Exclusive chips and bonuses<br>
+                💡 Early access to new features<br>
+                ❤️ Project development support<br>
             </p>
             <p class="advertisement-banner-note gray-text">
-                PixeFPS остаётся бесплатной, но премиум — это способ сказать «спасибо» и получить чуть больше удобства.
+                PixeFPS remains free, but premium is a way to say "thank you" and get a little more convenience.
             </p>
-            <button class="advertisement-banner-button theme-button theme-text">Подробнее</button>
+            <button class="advertisement-banner-button theme-button theme-text">Details</button>
         </div>
             <div class="advertisement-banner-right">
         </div>
