Add advertisement banner +fix v2

--- a/home.html
+++ b/home.html
@@ -244,7 +244,7 @@
                 ❤️ Project development support<br>
             </p>
             <p class="advertisement-banner-note gray-text">
-                PixeFPS remains free, but premium is a way to say "thank you" and get a little more convenience.
+                PixeFPS remains free, but premium is a way to say «thank you» and get a little more convenience.
             </p>
             <button class="advertisement-banner-button theme-button theme-text">Details</button>
         </div>
