Add advertisement banner +fix v3

--- a/home.html
+++ b/home.html
@@ -235,7 +235,7 @@
     <div class="advertisement-banner">
         <button class="close-banner-btn">✕</button>
         <div class="advertisement-banner-left">
-            <h2 class="advertisement-banner-text theme-text">Get access to "Premium"</h2>
+            <h2 class="advertisement-banner-text theme-text">Get access to «Premium»</h2>
             <p class="advertisement-banner-description theme-text">
                 Support the project and get more:<br><br>
                 🔕 Without ads and banners<br>
