--- a/settings.html
+++ b/settings.html
@@ -31,8 +31,7 @@
 
   <!-- Панель приветствия пользователя -->
   <div class="settings-card-welcome">
-    <img src="https://res.cloudinary.com/dqceexk1h/image/upload/v1750689301/default.png" alt="User Avatar"
-      class="profile-avatar profile-avatar-img">
+      <img src="https://res.cloudinary.com/dqceexk1h/image/upload/v1750689301/default.png" alt="User Avatar" class="profile-avatar profile-avatar-img">
     <div class="welcome-text">
       <div class="user-fullname theme-text"></div>
       <span class="label-id theme-text">ID: <span class="user-id"></span></span>
