--- a/settings.html
+++ b/settings.html
@@ -35,7 +35,7 @@
     <div class="welcome-text">
       <div class="user-fullname-wrapper">
         <div class="user-fullname theme-text"></div>
-        <div id="user-status" class="tooltip-status-wrapper" style="display:none;">
+        <div id="user-status" class="tooltip-status-wrapper">
           <img id="user-status-icon" src="" alt="User status" class="user-status-icon" />
           <div class="tooltip-status">
             <div id="tooltip-status-title" class="tooltip-status-title"></div>
