--- a/settings.html
+++ b/settings.html
@@ -31,11 +31,12 @@
 
   <!-- Панель приветствия пользователя -->
   <div class="settings-card-welcome">
-      <img src="https://res.cloudinary.com/dqceexk1h/image/upload/v1750689301/default.png" alt="User Avatar" class="profile-avatar profile-avatar-img">
+    <img src="https://res.cloudinary.com/dqceexk1h/image/upload/v1750689301/default.png" alt="User Avatar" class="profile-avatar profile-avatar-img">
     <div class="welcome-text">
       <div class="user-fullname-wrapper">
         <div class="user-fullname theme-text"></div>
-        <div id="user-status" class="tooltip-status-wrapper">
+        <!-- Добавляем блок статуса -->
+        <div id="user-status" class="tooltip-status-wrapper" style="display:none;">
           <img id="user-status-icon" src="" alt="User status" class="user-status-icon" />
           <div class="tooltip-status">
             <div id="tooltip-status-title" class="tooltip-status-title"></div>
@@ -47,6 +48,7 @@
       <span class="label-id theme-text">ID: <span class="user-id"></span></span>
     </div>
   </div>
+
 
   <!-- Панель настроек -->
   <div class="settings-card">
