--- a/settings.html
+++ b/settings.html
@@ -35,15 +35,7 @@
     <div class="welcome-text">
       <div class="user-fullname-wrapper">
         <div class="user-fullname theme-text"></div>
-        <!-- Добавляем блок статуса -->
-        <div id="user-status" class="tooltip-status-wrapper" style="display:none;">
-          <img id="user-status-icon" src="" alt="User status" class="user-status-icon" />
-          <div class="tooltip-status">
-            <div id="tooltip-status-title" class="tooltip-status-title"></div>
-            <div id="tooltip-status-text" class="tooltip-status-text theme-text"></div>
-            <div class="tooltip-status-arrow"></div>
-          </div>
-        </div>
+        <img id="user-status-icon" class="user-status-icon" style="display:none;" alt="User status" />
       </div>
       <span class="label-id theme-text">ID: <span class="user-id"></span></span>
     </div>
