--- a/settings.html
+++ b/settings.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/typography.css">
   <link rel="stylesheet" href="css/themes.css">
-  <link rel="stylesheet" href="css/settings_test.css">
+  <link rel="stylesheet" href="css/settings.css">
   <!-- Подключение кастомных стилей -->
   <link rel="stylesheet" href="css/modal_message.css">
 </head>
@@ -33,14 +33,13 @@
   <div class="settings-card-welcome">
     <img src="https://res.cloudinary.com/dqceexk1h/image/upload/v1750689301/default.png" alt="User Avatar" class="profile-avatar profile-avatar-img">
     <div class="welcome-text">
-      <div class="user-fullname-wrapper">
+      <div class="user-fullname-row">
         <div class="user-fullname theme-text"></div>
         <img id="user-status-icon" class="user-status-icon" style="display:none;" alt="User status" />
       </div>
       <span class="label-id theme-text">ID: <span class="user-id"></span></span>
     </div>
   </div>
-
 
   <!-- Панель настроек -->
   <div class="settings-card">
