A working and stable update

--- a/settings.html
+++ b/settings.html
@@ -51,23 +51,23 @@
 
   <!-- Панель настроек -->
   <div class="settings-card">
-    <h2 class="theme-text">General settings</h2>
+    <h2 class="settings-card-title theme-text">General settings</h2>
     <div class="section-underline"></div>
 
     <div class="row">
       <div class="column">
-        <label class="theme-text">First Name</label>
+        <label class="settings-card-firstname theme-text">First Name</label>
         <input class="theme-input" type="text" placeholder="First Name" id="firstNameInput" />
       </div>
       <div class="column">
-        <label class="theme-text">Last Name</label>
+        <label class="settings-card-lastname theme-text">Last Name</label>
         <input class="theme-input" type="text" placeholder="Last Name" id="lastNameInput" />
       </div>
     </div>
 
     <div class="row gender-dob-row">
       <div class="column gender-column">
-        <label class="theme-text">Gender</label>
+        <label class=" settings-card-gender theme-text">Gender</label>
         <div class="select-wrapper">
           <select class="theme-input" id="genderSelect">
             <option selected disabled>Select a gender</option>
@@ -79,7 +79,7 @@
       </div>
 
       <div class="column dob-column">
-        <label class="theme-text">Date of birth</label>
+        <label class="settings-card-datebirth theme-text">Date of birth</label>
         <div class="dob-selects">
           <div class="select-wrapper">
             <select class="theme-input" id="birthDay">
@@ -108,7 +108,7 @@
 
     <div class="row country-row">
       <div class="column country-column">
-        <label class="theme-text">Country</label>
+        <label class="settings-card-country theme-text">Country</label>
         <div class="select-wrapper">
           <select class="theme-input" id="countrySelect">
             <option selected disabled>Select a country</option>
@@ -124,7 +124,7 @@
 
   <!-- Панель безопасность -->
   <div class="secure-card">
-    <h2 class="theme-text">Secure</h2>
+    <h2 class="secure-card-title theme-text">Secure</h2>
     <div class="section-underline"></div>
   </div>
 
