Modal overlay update

--- a/home.html
+++ b/home.html
@@ -19,8 +19,8 @@
     <link rel="stylesheet" href="css/player.css">
     <link rel="stylesheet" href="css/interactivehelp.css">
     <link rel="stylesheet" href="css/pushnotify.css">
-    <link rel="stylesheet" href="css/advertisement.css">
-    <link rel="stylesheet" href="css/promo-modal.css">
+    <link rel="stylesheet" href="css/banner_promo.css">
+    <link rel="stylesheet" href="css/modal_promo.css">
 </head>
 
 <body>
@@ -232,24 +232,24 @@
         </div>
     </div>
 
-    <!-- Advertisement banner -->
-    <div class="advertisement-banner">
+    <!-- Promo banner -->
+    <div class="banner-promo">
         <button class="close-banner-btn">✕</button>
-        <div class="advertisement-banner-left">
-            <h2 class="advertisement-banner-text theme-text">Get access to «Premium»</h2>
-            <p class="advertisement-banner-description theme-text">
+        <div class="banner-promo-left">
+            <h2 class="banner-promo-text theme-text">Get access to «Premium»</h2>
+            <p class="banner-promo-description theme-text">
                 Support the project and get more:<br><br>
                 🔕 Without ads and banners<br>
                 🎁 Exclusive chips and bonuses<br>
                 💡 Early access to new features<br>
                 ❤️ Project development support<br>
             </p>
-            <p class="advertisement-banner-note gray-text">
+            <p class="banner-promo-note gray-text">
                 PixeFPS remains free, but premium is a way to say «thank you» and get a little more convenience.
             </p>
-            <button class="advertisement-banner-button theme-button theme-text">Details</button>
+            <button class="banner-promo-button theme-button theme-text">Details</button>
         </div>
-        <div class="advertisement-banner-right">
+        <div class="banner-promo-right">
         </div>
     </div>
 
@@ -443,8 +443,8 @@
     <script src="js/menu_dropdown.js"></script>
     <script src="js/download.js"></script>
     <script src="js/pushnotify.js"></script>
-    <script src="js/advertisement.js"></script>
-    <script src="js/promo-modal.js"></script>
+    <script src="js/banner_promo.js"></script>
+    <script src="js/modal_promo.js"></script>
 </body>
 
 </html>
