Modal overlay update

--- a/home.html
+++ b/home.html
@@ -233,7 +233,7 @@
     </div>
 
     <!-- Promo banner -->
-    <div class="banner-promo">
+    <div class="banner-promo theme-banner">
         <button class="close-banner-btn">✕</button>
         <div class="banner-promo-left">
             <h2 class="banner-promo-text theme-text">Get access to «Premium»</h2>
