--- a/settings.html
+++ b/settings.html
@@ -70,7 +70,7 @@
         <label class=" settings-card-gender theme-text">Gender</label>
         <div class="select-wrapper">
           <select class="theme-input" id="genderSelect">
-            <option selected disabled>Select a gender</option>
+            <option selected disabled>Select gender</option>
             <option>Male</option>
             <option>Female</option>
           </select>
@@ -111,7 +111,7 @@
         <label class="settings-card-country theme-text">Country</label>
         <div class="select-wrapper">
           <select class="theme-input" id="countrySelect">
-            <option selected disabled>Select a country</option>
+            <option selected disabled>Select country</option>
             <!-- options... -->
           </select>
           <img class="select-arrow theme-icon" src="assets/icons/angle-small-down.svg" alt="Arrow" />
