--- a/home.html
+++ b/home.html
@@ -22,6 +22,9 @@
 
 <body>
     <header class="header">
+        <div class="burger theme-icon" id="burger-btn">
+            <img src="assets/icons/menu-burger.svg" alt="Menu" />
+        </div>
         <div class="logo theme-text">
             <img src="assets/icons/logo.svg" alt="Logo" class="logo-img theme-icon">
             ValeyevStudio
@@ -382,6 +385,22 @@
                 <br>
                 The subscription allows you to remove intrusive banners through the settings and access other
                 features.
+            </div>
+        </div>
+    </div>
+
+    <!-- Mobile menu -->
+    <div class="mobile-menu" id="mobileMenu">
+        <div class="mobile-menu__overlay"></div>
+        <div class="mobile-menu__content">
+            <button class="mobile-menu__close" id="closeMenu">✕</button>
+            <nav class="mobile-nav">
+                <a href="/home.html" class="mobile-nav-home active">Home</a>
+                <a href="/products.html" class="mobile-nav-our-products">Our Products</a>
+                <a href="/about.html" class="mobile-nav-about-us">About Us</a>
+            </nav>
+            <div class="mobile-logo">
+                <img src="/assets/icons/logo-chromo.png" alt="ValeyevStudio Logo">
             </div>
         </div>
     </div>
